[package]
authors = ["Alex Eagleson <alexeagleson@gmail.com>"]
description = "A library for handling individual text characters that can be rendered on the screen. Intended for use in game development."
edition = "2021"
homepage = "https://github.com/alexeagleson"
license = "MIT OR Apache-2.0"
name = "ae-renderable"
readme = "README.md"
repository = "https://github.com/alexeagleson/ae-renderable"
rust-version = "1.65"
version = "0.1.1"

[dependencies]
serde = {version = "1.0.140", features = ["derive"]}
serde_json = "1.0.82"
